--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>"Hello, HTML!"</title>
+  </head>
+  <body>
+    <h1>Heading 1</h1>
+    <p>
+      This is a test of the Atom  Text editor.  
+    </p>
+
+  </body>
+</html>
